--- a/speccer.css
+++ b/speccer.css
@@ -1,7 +1,7 @@
 .ph.speccer {
-  --ph-speccer-color-padding: rgba(219, 111, 255, 0.4);
+  --ph-speccer-color-padding: rgba(219,111,255,0.4);
   --ph-speccer-color-padding-hover: #db6fff;
-  --ph-speccer-color-margin: rgba(255, 247, 111, 0.4);
+  --ph-speccer-color-margin: rgba(255,247,111,0.4);
   --ph-speccer-color-margin-hover: #fff76f;
   --ph-speccer-color-text-light: #fff;
   --ph-speccer-color-text-dark: #333;
@@ -14,9 +14,7 @@
   --ph-speccer-typography-color-text: #57575b;
   --ph-speccer-typography-color-value: var(--ph-speccer-color-contrast);
   --ph-speccer-depth-opacity-400: 0.4;
-  --ph-speccer-font-family: 'Menlo for Powerline', 'Menlo Regular for Powerline',
-    'DejaVu Sans Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono',
-    monospace;
+  --ph-speccer-font-family: "Menlo for Powerline", "Menlo Regular for Powerline", "DejaVu Sans Mono", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   --ph-speccer-font-size: 12px;
   --ph-speccer-line-height: 12px;
   --ph-speccer-pin-size: 24px;
@@ -74,7 +72,7 @@ svg.ph .ph.path {
   z-index: 100000;
 }
 .ph.speccer.dissection::after {
-  content: '';
+  content: "";
   position: absolute;
   height: var(--ph-speccer-pin-space);
   top: 100%;
@@ -114,7 +112,7 @@ svg.ph .ph.path {
   right: 50%;
 }
 .ph.speccer.dissection::after {
-  content: '';
+  content: "";
   position: absolute;
   height: var(--ph-speccer-pin-space);
   top: 100%;
@@ -141,10 +139,7 @@ svg.ph .ph.path {
   border: var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color);
 }
 .ph.speccer.dissection.outline.enclose::after {
-  top: calc(
-    var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) -
-      var(--ph-speccer-pin-space)
-  );
+  top: calc(var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) - var(--ph-speccer-pin-space));
   bottom: auto;
 }
 .ph.speccer.dissection.outline.enclose::before {
@@ -152,9 +147,7 @@ svg.ph .ph.path {
   top: auto;
 }
 .ph.speccer.dissection.outline.enclose.right::after {
-  left: calc(
-    100% + calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
-  );
+  left: calc(100% + calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width)));
   right: auto;
 }
 .ph.speccer.dissection.outline.enclose.right::before {
@@ -162,10 +155,7 @@ svg.ph .ph.path {
   right: auto;
 }
 .ph.speccer.dissection.outline.enclose.left::after {
-  left: calc(
-    var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) -
-      var(--ph-speccer-pin-space)
-  );
+  left: calc(var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) - var(--ph-speccer-pin-space));
   right: auto;
 }
 .ph.speccer.dissection.outline.enclose.left::before {
@@ -173,10 +163,7 @@ svg.ph .ph.path {
   left: auto;
 }
 .ph.speccer.dissection.outline.enclose.top::after {
-  top: calc(
-    var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) -
-      var(--ph-speccer-pin-space)
-  );
+  top: calc(var(--ph-speccer-line-width-negative) - var(--ph-speccer-pin-size) - var(--ph-speccer-pin-space));
   bottom: auto;
 }
 .ph.speccer.dissection.outline.enclose.top::before {
@@ -184,9 +171,7 @@ svg.ph .ph.path {
   top: auto;
 }
 .ph.speccer.dissection.outline.enclose.bottom::after {
-  top: calc(
-    100% + calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
-  );
+  top: calc(100% + calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width)));
   bottom: auto;
 }
 .ph.speccer.dissection.outline.enclose.bottom::before {
@@ -308,7 +293,7 @@ svg.ph .ph.path {
 .ph.speccer.dissection.outline.full.left:not(.curly)::before,
 .ph.speccer.dissection.outline.full.top:not(.curly)::before,
 .ph.speccer.dissection.outline.full.bottom:not(.curly)::before {
-  content: '';
+  content: "";
   position: absolute;
   background-color: var(--ph-speccer-pin-color);
   z-index: 100000;
@@ -373,7 +358,7 @@ svg.ph .ph.path {
 .ph.speccer.dissection.outline.enclose.left::before,
 .ph.speccer.dissection.outline.enclose.top::before,
 .ph.speccer.dissection.outline.enclose.bottom::before {
-  content: '';
+  content: "";
   position: absolute;
   background-color: var(--ph-speccer-pin-color);
   z-index: 100000;
@@ -492,24 +477,21 @@ svg.ph .ph.path {
 .ph.speccer.spacing.margin.bottom::after,
 .ph.speccer.spacing.margin.top::after {
   transition: none;
-  content: '';
+  content: "";
   position: absolute;
   height: 100%;
-  border-top: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-color-text-dark);
-  border-bottom: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-color-text-dark);
+  border-top: var(--ph-speccer-line-width) solid var(--ph-speccer-color-text-dark);
+  border-bottom: var(--ph-speccer-line-width) solid var(--ph-speccer-color-text-dark);
   width: 9px;
   left: 40%;
 }
 .ph.speccer.spacing.margin.bottom::before,
 .ph.speccer.spacing.margin.top::before {
   transition: none;
-  content: '';
+  content: "";
   position: absolute;
   height: 100%;
-  border-left: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-color-text-dark);
+  border-left: var(--ph-speccer-line-width) solid var(--ph-speccer-color-text-dark);
   margin-left: 4px;
   width: 0;
   left: 40%;
@@ -517,24 +499,21 @@ svg.ph .ph.path {
 .ph.speccer.spacing.margin.left::after,
 .ph.speccer.spacing.margin.right::after {
   transition: none;
-  content: '';
+  content: "";
   position: absolute;
   height: 9px;
-  border-right: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-color-text-dark);
-  border-left: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-color-text-dark);
+  border-right: var(--ph-speccer-line-width) solid var(--ph-speccer-color-text-dark);
+  border-left: var(--ph-speccer-line-width) solid var(--ph-speccer-color-text-dark);
   width: 100%;
   top: 10%;
 }
 .ph.speccer.spacing.margin.left::before,
 .ph.speccer.spacing.margin.right::before {
   transition: none;
-  content: '';
+  content: "";
   position: absolute;
   height: 0;
-  border-top: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-color-text-dark);
+  border-top: var(--ph-speccer-line-width) solid var(--ph-speccer-color-text-dark);
   margin-top: 4px;
   width: 100%;
   top: 10%;
@@ -542,23 +521,21 @@ svg.ph .ph.path {
 .ph.speccer.spacing.padding.bottom::after,
 .ph.speccer.spacing.padding.top::after {
   transition: none;
-  content: '';
+  content: "";
   position: absolute;
   height: 100%;
   border-top: var(--ph-speccer-line-width) solid var(--ph-speccer-spacing-color);
-  border-bottom: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-spacing-color);
+  border-bottom: var(--ph-speccer-line-width) solid var(--ph-speccer-spacing-color);
   width: 9px;
   left: 40%;
 }
 .ph.speccer.spacing.padding.bottom::before,
 .ph.speccer.spacing.padding.top::before {
   transition: none;
-  content: '';
+  content: "";
   position: absolute;
   height: 100%;
-  border-left: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-spacing-color);
+  border-left: var(--ph-speccer-line-width) solid var(--ph-speccer-spacing-color);
   margin-left: 4px;
   width: 0;
   left: 40%;
@@ -566,20 +543,18 @@ svg.ph .ph.path {
 .ph.speccer.spacing.padding.left::after,
 .ph.speccer.spacing.padding.right::after {
   transition: none;
-  content: '';
+  content: "";
   position: absolute;
   height: 9px;
-  border-right: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-spacing-color);
-  border-left: var(--ph-speccer-line-width) solid
-    var(--ph-speccer-spacing-color);
+  border-right: var(--ph-speccer-line-width) solid var(--ph-speccer-spacing-color);
+  border-left: var(--ph-speccer-line-width) solid var(--ph-speccer-spacing-color);
   width: 100%;
   top: 10%;
 }
 .ph.speccer.spacing.padding.left::before,
 .ph.speccer.spacing.padding.right::before {
   transition: none;
-  content: '';
+  content: "";
   position: absolute;
   height: 0;
   border-top: var(--ph-speccer-line-width) solid var(--ph-speccer-spacing-color);
@@ -603,7 +578,7 @@ svg.ph .ph.path {
   border: var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color);
 }
 .ph.speccer.typography:after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   background-color: var(--ph-speccer-pin-color);
