--- a/src/styles/measure.styl
+++ b/src/styles/measure.styl
@@ -1,7 +1,7 @@
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   display flex
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.width
     color var(--ph-speccer-measure-color)
     border var(--ph-speccer-line-width) solid var(--ph-speccer-measure-color)
@@ -9,7 +9,7 @@
     height var(--ph-speccer-measure-size)
 
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.width
     &::after
       content attr(data-measure)
@@ -17,7 +17,7 @@
       top calc(-100% - 10px)
 
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.width
     &.bottom
       color var(--ph-speccer-measure-color)
@@ -25,7 +25,7 @@
       border-top none
 
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.width
     &.bottom
       &::after
@@ -34,7 +34,7 @@
         top calc(100% + 5px)
 
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.width
     &.top
       color var(--ph-speccer-measure-color)
@@ -42,7 +42,7 @@
       border-bottom none
 
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.width
     &.top
       &::after
@@ -51,7 +51,7 @@
         bottom calc(100% + 5px)
 
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.height
     &.left
       color var(--ph-speccer-measure-color)
@@ -60,7 +60,7 @@
       width var(--ph-speccer-measure-size)
 
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.height
     &.left
       &::after
@@ -71,7 +71,7 @@
         transform translateY(-50%) rotate(-90deg)
 
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.height
     &.right
       color var(--ph-speccer-measure-color)
@@ -80,7 +80,7 @@
       width var(--ph-speccer-measure-size)
 
 
-.ph.speccer.measure
+.ph-speccer.speccer.measure
   &.height
     &.right
       &::after
@@ -91,13 +91,13 @@
         transform translateY(-50%) rotate(90deg)
 
 
-.ph.speccer.measure.subtle.width.top,
-.ph.speccer.measure.subtle.width.bottom,
-.ph.speccer.measure.subtle.height.right,
-.ph.speccer.measure.subtle.height.left
+.ph-speccer.speccer.measure.subtle.width.top,
+.ph-speccer.speccer.measure.subtle.width.bottom,
+.ph-speccer.speccer.measure.subtle.height.right,
+.ph-speccer.speccer.measure.subtle.height.left
   border-style dashed
 
-.ph.speccer.measure.subtle
+.ph-speccer.speccer.measure.subtle
   &.width.top
     border-bottom none
   &.width.bottom
