--- a/src/styles/spacing.styl
+++ b/src/styles/spacing.styl
@@ -1,4 +1,4 @@
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   pointer-events auto
   transition none
   border var(--ph-speccer-line-width) solid transparent
@@ -6,19 +6,19 @@
     border var(--ph-speccer-line-width) solid var(--ph-speccer-color-text-dark)
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.margin
     background-color var(--ph-speccer-color-margin)
     color var(--ph-speccer-color-text-dark)
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.padding
     background-color var(--ph-speccer-color-padding)
     color var(--ph-speccer-spacing-color)
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.margin
     &.bottom,
     &.top
@@ -33,7 +33,7 @@
         left 40%
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.margin
     &.bottom,
     &.top
@@ -48,7 +48,7 @@
         left 40%
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.margin
     &.left,
     &.right
@@ -63,7 +63,7 @@
         top 10%
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.margin
     &.left,
     &.right
@@ -78,7 +78,7 @@
         top 10%
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.padding
     &.bottom,
     &.top
@@ -93,7 +93,7 @@
         left 40%
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.padding
     &.bottom,
     &.top
@@ -108,7 +108,7 @@
         left 40%
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.padding
     &.left,
     &.right
@@ -123,7 +123,7 @@
         top 10%
 
 
-.ph.speccer.spacing
+.ph-speccer.speccer.spacing
   &.padding
     &.left,
     &.right
