--- a/src/styles/typography.styl
+++ b/src/styles/typography.styl
@@ -1,4 +1,4 @@
-.ph.speccer.typography
+.ph-speccer.speccer.typography
   background-color var(--ph-speccer-typography-background-color)
   color var(--ph-speccer-typography-color-text)
   font-size 10px
