--- a/src/styles/anatomy.styl
+++ b/src/styles/anatomy.styl
@@ -1,4 +1,4 @@
-.ph.speccer.dissection
+.ph-speccer.speccer.dissection
   font-family sans-serif
   height var(--ph-speccer-pin-size)
   width var(--ph-speccer-pin-size)
@@ -16,7 +16,7 @@
 
 
 
-.ph.speccer.dissection::after
+.ph-speccer.speccer.dissection::after
   content ""
   position absolute
   height var(--ph-speccer-pin-space)
@@ -26,39 +26,39 @@
   z-index 99999
 
 
-.ph.speccer.dissection.svg::after,
-.ph.speccer.dissection.curly::after
+.ph-speccer.speccer.dissection.svg::after,
+.ph-speccer.speccer.dissection.curly::after
   content none !important
 
-.ph.speccer.dissection.outline::after,
-.ph.speccer.dissection.outline.top::after
+.ph-speccer.speccer.dissection.outline::after,
+.ph-speccer.speccer.dissection.outline.top::after
   height var(--ph-speccer-pin-space)
   width var(--ph-speccer-line-width)
   top 100%
   right 50%
 
-.ph.speccer.dissection.outline.left::after
+.ph-speccer.speccer.dissection.outline.left::after
   height var(--ph-speccer-line-width)
   width var(--ph-speccer-pin-space)
   top 50%
   left 100%
   right auto
 
-.ph.speccer.dissection.outline.right::after
+.ph-speccer.speccer.dissection.outline.right::after
   height var(--ph-speccer-line-width)
   width var(--ph-speccer-pin-space)
   top 50%
   left auto
   right 100%
 
-.ph.speccer.dissection.outline.bottom::after
+.ph-speccer.speccer.dissection.outline.bottom::after
   height var(--ph-speccer-pin-space)
   width var(--ph-speccer-line-width)
   top calc(-100% - (var(--ph-speccer-pin-space) / 2))
   right 50%
 
 
-.ph.speccer.dissection
+.ph-speccer.speccer.dissection
   &::after
     content ""
     position absolute
@@ -168,8 +168,8 @@
         right 50%
 
 
-.ph.speccer.dissection.outline.top::after,
-.ph.speccer.dissection.outline::after
+.ph-speccer.speccer.dissection.outline.top::after,
+.ph-speccer.speccer.dissection.outline::after
   height var(--ph-speccer-pin-space)
   width var(--ph-speccer-line-width)
   top 100%
@@ -178,22 +178,22 @@
 [data-anatomy-section]
   counter-reset type
 
-.ph.speccer.dissection.outline.full.right,
-.ph.speccer.dissection.outline.full.left
+.ph-speccer.speccer.dissection.outline.full.right,
+.ph-speccer.speccer.dissection.outline.full.left
   &:not(.curly)
     width 8px
 
-.ph.speccer.dissection.outline.full,
-.ph.speccer.dissection.outline.full.top,
-.ph.speccer.dissection.outline.full.bottom
+.ph-speccer.speccer.dissection.outline.full,
+.ph-speccer.speccer.dissection.outline.full.top,
+.ph-speccer.speccer.dissection.outline.full.bottom
   &:not(.curly)
     height 8px
 
-.ph.speccer.dissection.outline.full,
-.ph.speccer.dissection.outline.full.right,
-.ph.speccer.dissection.outline.full.left,
-.ph.speccer.dissection.outline.full.top,
-.ph.speccer.dissection.outline.full.bottom
+.ph-speccer.speccer.dissection.outline.full,
+.ph-speccer.speccer.dissection.outline.full.right,
+.ph-speccer.speccer.dissection.outline.full.left,
+.ph-speccer.speccer.dissection.outline.full.top,
+.ph-speccer.speccer.dissection.outline.full.bottom
   &:not(.curly)
     &::after
       content attr(data-dissection-counter)
@@ -210,26 +210,26 @@
       font-size 16px
       z-index 100000
 
-.ph.speccer.dissection.outline.full.right,
-.ph.speccer.dissection.outline.full.left
+.ph-speccer.speccer.dissection.outline.full.right,
+.ph-speccer.speccer.dissection.outline.full.left
   &:not(.curly)
     &::after
       top 50%
       transform translateY(-50%)
 
-.ph.speccer.dissection.outline.full,
-.ph.speccer.dissection.outline.full.top,
-.ph.speccer.dissection.outline.full.bottom
+.ph-speccer.speccer.dissection.outline.full,
+.ph-speccer.speccer.dissection.outline.full.top,
+.ph-speccer.speccer.dissection.outline.full.bottom
   &:not(.curly)
     &::after
       left 50%
       transform translateX(-50%)
 
-.ph.speccer.dissection.outline.full,
-.ph.speccer.dissection.outline.full.right,
-.ph.speccer.dissection.outline.full.left,
-.ph.speccer.dissection.outline.full.top,
-.ph.speccer.dissection.outline.full.bottom
+.ph-speccer.speccer.dissection.outline.full,
+.ph-speccer.speccer.dissection.outline.full.right,
+.ph-speccer.speccer.dissection.outline.full.left,
+.ph-speccer.speccer.dissection.outline.full.top,
+.ph-speccer.speccer.dissection.outline.full.bottom
   &:not(.curly)
     &::before
       content ""
@@ -238,8 +238,8 @@
       z-index 100000
       display block
 
-.ph.speccer.dissection.outline.full.right,
-.ph.speccer.dissection.outline.full.left
+.ph-speccer.speccer.dissection.outline.full.right,
+.ph-speccer.speccer.dissection.outline.full.left
   &:not(.curly)
     &::before
       top 50%
@@ -247,9 +247,9 @@
       height var(--ph-speccer-line-width)
       width calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
 
-.ph.speccer.dissection.outline.full,
-.ph.speccer.dissection.outline.full.top,
-.ph.speccer.dissection.outline.full.bottom
+.ph-speccer.speccer.dissection.outline.full,
+.ph-speccer.speccer.dissection.outline.full.top,
+.ph-speccer.speccer.dissection.outline.full.bottom
   &:not(.curly)
     &::before
       left 50%
@@ -259,20 +259,20 @@
 
 
 
-.ph.speccer.dissection.outline.enclose.right,
-.ph.speccer.dissection.outline.enclose.left
+.ph-speccer.speccer.dissection.outline.enclose.right,
+.ph-speccer.speccer.dissection.outline.enclose.left
   width 8px
 
-.ph.speccer.dissection.outline.enclose,
-.ph.speccer.dissection.outline.enclose.top,
-.ph.speccer.dissection.outline.enclose.bottom
+.ph-speccer.speccer.dissection.outline.enclose,
+.ph-speccer.speccer.dissection.outline.enclose.top,
+.ph-speccer.speccer.dissection.outline.enclose.bottom
   height 8px
 
-.ph.speccer.dissection.outline.enclose::after,
-.ph.speccer.dissection.outline.enclose.right::after,
-.ph.speccer.dissection.outline.enclose.left::after,
-.ph.speccer.dissection.outline.enclose.top::after,
-.ph.speccer.dissection.outline.enclose.bottom::after
+.ph-speccer.speccer.dissection.outline.enclose::after,
+.ph-speccer.speccer.dissection.outline.enclose.right::after,
+.ph-speccer.speccer.dissection.outline.enclose.left::after,
+.ph-speccer.speccer.dissection.outline.enclose.top::after,
+.ph-speccer.speccer.dissection.outline.enclose.bottom::after
   content attr(data-dissection-counter)
   height var(--ph-speccer-pin-size)
   width var(--ph-speccer-pin-size)
@@ -287,45 +287,45 @@
   font-size 16px
   z-index 100000
 
-.ph.speccer.dissection.outline.enclose.right::after,
-.ph.speccer.dissection.outline.enclose.left::after
+.ph-speccer.speccer.dissection.outline.enclose.right::after,
+.ph-speccer.speccer.dissection.outline.enclose.left::after
   top 50%
   transform translateY(-50%)
 
-.ph.speccer.dissection.outline.enclose::after,
-.ph.speccer.dissection.outline.enclose.top::after,
-.ph.speccer.dissection.outline.enclose.bottom::after
+.ph-speccer.speccer.dissection.outline.enclose::after,
+.ph-speccer.speccer.dissection.outline.enclose.top::after,
+.ph-speccer.speccer.dissection.outline.enclose.bottom::after
   left 50%
   transform translateX(-50%)
 
-.ph.speccer.dissection.outline.enclose::before,
-.ph.speccer.dissection.outline.enclose.right::before,
-.ph.speccer.dissection.outline.enclose.left::before,
-.ph.speccer.dissection.outline.enclose.top::before,
-.ph.speccer.dissection.outline.enclose.bottom::before
+.ph-speccer.speccer.dissection.outline.enclose::before,
+.ph-speccer.speccer.dissection.outline.enclose.right::before,
+.ph-speccer.speccer.dissection.outline.enclose.left::before,
+.ph-speccer.speccer.dissection.outline.enclose.top::before,
+.ph-speccer.speccer.dissection.outline.enclose.bottom::before
   content ""
   position absolute
   background-color var(--ph-speccer-pin-color)
   z-index 100000
   display block
 
-.ph.speccer.dissection.outline.enclose.right::before,
-.ph.speccer.dissection.outline.enclose.left::before
+.ph-speccer.speccer.dissection.outline.enclose.right::before,
+.ph-speccer.speccer.dissection.outline.enclose.left::before
   top 50%
   transform translateY(-50%)
   height var(--ph-speccer-line-width)
   width calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
 
-.ph.speccer.dissection.outline.enclose::before,
-.ph.speccer.dissection.outline.enclose.top::before,
-.ph.speccer.dissection.outline.enclose.bottom::before
+.ph-speccer.speccer.dissection.outline.enclose::before,
+.ph-speccer.speccer.dissection.outline.enclose.top::before,
+.ph-speccer.speccer.dissection.outline.enclose.bottom::before
   left 50%
   transform translateX(-50%)
   width var(--ph-speccer-line-width)
   height calc(var(--ph-speccer-pin-space) + var(--ph-speccer-line-width))
 
 
-.ph.speccer.dissection.outline.subtle
+.ph-speccer.speccer.dissection.outline.subtle
   border var(--ph-speccer-line-width) solid var(--ph-speccer-pin-color)
   background-color var(--ph-speccer-color-text-light)
   color var(--ph-speccer-pin-color)
@@ -342,7 +342,7 @@
       background-color transparent
       border-top var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
 
-.ph.speccer.dissection.outline.full.subtle:not(.curly)
+.ph-speccer.speccer.dissection.outline.full.subtle:not(.curly)
   border var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
   background-color transparent
   border-bottom none
@@ -378,7 +378,7 @@
       border-top var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
 
 
-.ph.speccer.dissection.outline.enclose.subtle
+.ph-speccer.speccer.dissection.outline.enclose.subtle
   border-style dashed
   &::after
     height var(--ph-speccer-pin-size)
