--- a/src/styles/mark.styl
+++ b/src/styles/mark.styl
@@ -1,4 +1,4 @@
-.ph.speccer.mark
+.ph-speccer.speccer.mark
   background-color var(--ph-speccer-mark-background-color)
   border-color var(--ph-speccer-mark-border-color)
   border-width 1px
