--- a/src/styles/typography.styl
+++ b/src/styles/typography.styl
@@ -3,7 +3,7 @@
   color var(--ph-speccer-typography-color-text)
   font-size 10px
   padding 8px
-  max-width none
+  max-width 320px
   width auto
   display block
   text-align left
