--- a/speccer.css
+++ b/speccer.css
@@ -569,7 +569,7 @@ svg.ph-speccer .ph-speccer.path {
   color: var(--ph-speccer-typography-color-text);
   font-size: 10px;
   padding: 8px;
-  max-width: none;
+  max-width: 320px;
   width: auto;
   display: block;
   text-align: left;
