--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -60,6 +60,8 @@ svg.ph-speccer,
   pointer-events none
   user-select none
   box-sizing border-box
+  margin 0
+  padding 0
 
 
 .ph-speccer.speccer:not(path),
