feat: 🎸 Add feature to highlight column gaps in grid containers
✅ Closes: #198

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -68,7 +68,7 @@ svg.ph-speccer,
   padding 0
 
 
-.ph-speccer.speccer:not(path),
+.ph-speccer.speccer,
 .ph-speccer.speccer::after,
 .ph-speccer.speccer::before
   font-family var(--ph-speccer-font-family) !important
@@ -94,5 +94,6 @@ svg.ph-speccer .ph-speccer.path
 
 @require './anatomy.styl'
 @require './spacing.styl'
+@require './grid.styl'
 @require './mark.styl'
 @require '../features/a11y/styles/index.styl'
