--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -25,6 +25,7 @@ $ph-speccer-line-width-negative = -1px
 $ph-speccer-measure-size = 8px
 $ph-speccer-a11y-color-bakground = rgb(24, 104, 178)
 $ph-speccer-a11y-landmark-color-background = rgb(126, 96, 197)
+$ph-speccer-transition-default = all 2s cubic-bezier(0.4, 0, 0.2, 1)
 
 
 .ph-speccer.speccer
@@ -55,6 +56,7 @@ $ph-speccer-a11y-landmark-color-background = rgb(126, 96, 197)
   --ph-speccer-measure-size: $ph-speccer-measure-size;
   --ph-speccer-a11y-color-background: $ph-speccer-a11y-color-bakground;
   --ph-speccer-a11y-landmark-color-background: $ph-speccer-a11y-landmark-color-background;
+  --ph-speccer-transition-default: $ph-speccer-transition-default;
 
 
 svg.ph-speccer,
