fix: 🐛 Use CSS vars correctly to accommodate for transition

--- a/src/styles/grid.styl
+++ b/src/styles/grid.styl
@@ -2,6 +2,9 @@
   counter-reset column-gap
   justify-content initial
   transition var(--ph-speccer-transition-default)
+  column-gap var(--ph-speccer-grid-gap-original)
+  display grid
+  position absolute
 
 
 .ph-speccer.speccer.speccer-grid-item
