fix: 🐛 Add missing CSS variable

--- a/src/styles/grid.styl
+++ b/src/styles/grid.styl
@@ -30,7 +30,7 @@
   display flex
   justify-content center
   align-items center
-  color white
+  color var(--ph-speccer-color-text-light)
   border-top-left-radius 50%
   border-top-right-radius 50%
 
@@ -50,7 +50,7 @@
   display flex
   justify-content center
   align-items center
-  color white
+  color var(--ph-speccer-color-text-light)
   border-top-left-radius 50%
   border-top-right-radius 50%
 
