feat: 🎸 Add support to use syntax highlighting for typography
✅ Closes: #212

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -11,8 +11,8 @@ $ph-speccer-spacing-color = $ph-speccer-color-contrast;
 $ph-speccer-measure-color = rgb(255,0,0);
 $ph-speccer-pin-color = $ph-speccer-color-contrast;
 $ph-speccer-typography-background-color = rgb(255, 255,255);
-$ph-speccer-typography-color-property = rgb(63, 133, 242);
-$ph-speccer-typography-color-text = rgb(87, 87, 91);
+$ph-speccer-typography-color-property = #0074e8;
+$ph-speccer-typography-color-text = #ff3aa8;
 $ph-speccer-typography-color-value = $ph-speccer-color-contrast;
 $ph-speccer-depth-opacity-400 = 0.4;
 $ph-speccer-font-family = "Menlo for Powerline", "Menlo Regular for Powerline", "DejaVu Sans Mono", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
