fix: 🐛 Use correct background-color for subtle feature

--- a/src/styles/anatomy.styl
+++ b/src/styles/anatomy.styl
@@ -342,6 +342,9 @@
       background-color transparent
       border-top var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
 
+.ph-speccer.speccer.dissection.outline.enclose.subtle
+  background-color transparent
+
 .ph-speccer.speccer.dissection.outline.full.subtle:not(.curly)
   border var(--ph-speccer-line-width) dashed var(--ph-speccer-pin-color)
   background-color transparent
