feat: 🎸 Polish the feature, and add dev examples
✅ Closes: #8

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -91,7 +91,8 @@ svg.ph-speccer,
   pointer-events none
   z-index 3
 
-svg.ph-speccer .ph-speccer.path
+svg.ph-speccer .ph-speccer.path,
+svg.ph-speccer .ph-speccer.circle
   color var(--ph-speccer-color-contrast,$ph-speccer-color-contrast )
 
 @require './anatomy.styl'
