refactor: 💡 Move styles to respective feature, and split out
styles to more manageable files

--- a/src/features/grid/styles/index.styl
+++ b/src/features/grid/styles/index.styl
@@ -9,8 +9,8 @@
 
 .ph-speccer.speccer.speccer-grid-item
   transition var(--ph-speccer-transition-default)
-  border-left 1px solid var(--ph-speccer-color-contrast)
-  border-right 1px solid var(--ph-speccer-color-contrast)
+  border-left 1px solid var(--ph-speccer-base-color)
+  border-right 1px solid var(--ph-speccer-base-color)
   position relative
   height 100%
 
@@ -24,7 +24,7 @@
   position absolute
   top -32px
   left 100%;
-  background-color var(--ph-speccer-color-contrast)
+  background-color var(--ph-speccer-base-color)
   height 32px
   width calc(var(--ph-speccer-grid-gap) + 2px)
   display flex
@@ -44,7 +44,7 @@
   position absolute
   top -32px
   left 100%;
-  background-color var(--ph-speccer-color-contrast)
+  background-color var(--ph-speccer-base-color)
   height 32px
   width calc(var(--ph-speccer-grid-gap) + 2px)
   display flex
