fix: 🐛 Use css variable with base color fallback for svg els

--- a/src/styles/svg.styl
+++ b/src/styles/svg.styl
@@ -16,4 +16,4 @@ svg.ph-speccer
 
 svg.ph-speccer .ph-speccer.path,
 svg.ph-speccer .ph-speccer.circle
-  color var(--ph-speccer-base-color,var(--accent-color, rgb(255, 58, 168)) )
+  color var(--ph-speccer-base-color, #ff3aa8 )
